--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div id="wrap">
                 <div class="content clearfix">
                     <div class="left-box">
-
+                        <span><i class="fas fa-hamburger" style="font-size:50px;color:#fff;"></i></span>
                     </div>
                     <div class="right-box">
                         <div id="nav">
